--- a/Vehicle_Prediction.ipynb
+++ b/Vehicle_Prediction.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Wasiq-Rai/Vehicle-Prediction/blob/master/Vehicle_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "52y43s7qXZdv"
       },
       "source": [
@@ -11,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "id": "5K8uota6WSSw"
       },
@@ -89,7 +99,7 @@
         "id": "J7HZpUzxpR0e",
         "outputId": "3d60545f-715a-4e5a-d6ff-ebaabcd7de57"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +171,7 @@
         "id": "LH135NdspcFZ",
         "outputId": "6602281d-b251-4b11-f655-baa649878b6a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +251,7 @@
         "id": "BpwsDoaypzoO",
         "outputId": "102f73c0-996f-4153-c056-6fa75ed60ebc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +352,7 @@
         "id": "l-fMyPJxqGtP",
         "outputId": "be74718a-956a-4127-e50e-53ce5393f7e0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -399,7 +409,7 @@
         "id": "lbIP55xrsTOC",
         "outputId": "01c1bf25-1ff7-4f51-dbf4-801594313b6f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +514,7 @@
       "metadata": {
         "id": "xtNGYpdK_TTo"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +568,7 @@
         "id": "nxLkc18JsWG4",
         "outputId": "a4c898ee-90c4-4992-8de2-920e41e2cbc3"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,7 +594,7 @@
         "id": "viLPlZbqss2u",
         "outputId": "1be452b4-c6a6-43b1-f384-8d57e9ffd2b0"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +626,7 @@
         "id": "V1O_Y5ORuS5W",
         "outputId": "fcc90836-7c28-40e7-fb10-caccd696c368"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +671,7 @@
         "id": "iUooDVSO3K5b",
         "outputId": "cb1a2de3-0592-4873-9036-6869d3a30185"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +717,7 @@
         "id": "3eT-jKQT4_75",
         "outputId": "8bec70a1-60d3-4174-a8c2-aa07b25480e6"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,7 +763,7 @@
         "id": "B_D9mgDm5xb1",
         "outputId": "065829df-b1d4-449e-d3d0-77d3a59bf1b0"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +809,7 @@
         "id": "-gnMTlWp8H0I",
         "outputId": "e57559d4-620f-4f22-e709-a2440043dfb5"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +880,7 @@
         "id": "AiFMd-9MzZfT",
         "outputId": "a0ee142d-c53c-4da0-e54d-a06afae779dc"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +958,7 @@
         "id": "gllCfGe80NBZ",
         "outputId": "14663643-b638-48b7-907d-6d3a793fee1b"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1150,7 @@
         "id": "NPm3LVjE1B3W",
         "outputId": "5caad87f-a086-4fb2-a7af-d175df2adfd3"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1178,7 +1188,7 @@
         "id": "lThPKK122L5k",
         "outputId": "ce8b67ce-23a7-4402-8c5c-d46037edb531"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1219,7 +1229,7 @@
         "id": "0CeC80AO2pwd",
         "outputId": "367f2f2c-5cb4-4d24-c5f1-8b209dc3f33c"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1246,7 +1256,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1yV9v1tHCLknbRH_0SHxWisOp8HusVOrO",
+      "authorship_tag": "ABX9TyN9gsQXqFKp/WuhP/HwSyxO",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
